plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.3' apply(false)
    id 'io.spring.dependency-management' version '1.1.7' apply(false)
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}


allprojects {
    ext {
        set('springCloudVersion', "2024.0.0")
    }

    group = 'com.application.festival'
    version = '0.0.1-SNAPSHOT'

    repositories {
        mavenCentral()
    }


}


subprojects {


    apply plugin: 'java'
    apply plugin: 'java-library'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    dependencies {
        // lombok
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
    }

    tasks.named('test') {
        useJUnitPlatform()
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
        }
    }

    // submodule 설정 필요한 모듈에 전이
    if (project.name == "config") {
        tasks.register('copyPrivate', Copy) {
            from "$rootDir/cloud-config-private"
            include "config-server.properties"
            into "$projectDir/src/main/resources"
        }

        tasks.named('processResources') {
            dependsOn tasks.named('copyPrivate')
        }
    }
}
// submodule 에서 민감정보 이동
tasks.register('copyPrivate', Copy) {
    from 'cloud-config-private'
    include "config-server.properties"
    into 'application/config/src/main/resources'
}


